@@ -580,6 +580,8 @@ OuterPartLoop:
 		StringBuilder sb = new StringBuilder();
 		sb.append(getId());
 		sb.append(',');
+		sb.append(getStatus());
+		sb.append(',');
 		sb.append(getGame());
 		sb.append(',');
 		sb.append(getGroup());
